--- a/Readme.org
+++ b/Readme.org
@@ -1,7 +1,12 @@
 #+TITLE: 洞玄靈寶自然九天生神玉章經解 / CK-KZ
 
 #+DATE: 2015-08-28 23:48:52.783933
-* 目次
+* 版本
+ |     CK-KZ|【重刊道藏輯要】|
+ |       HFL|【正統道藏・涵芬樓版】|
+ |      YP-C|【原版道藏輯要】|
+ |      ZTDZ|【正統道藏・三家本】|
+目次
  - [[file:KR5b0081_000.txt][洞玄靈寶自然九天生神玉章經解 0]]
  - [[file:KR5b0081_001.txt][洞玄靈寶自然九天生神玉章經解 1]]
  - [[file:KR5b0081_002.txt][洞玄靈寶自然九天生神玉章經解 2]]
